--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@tanstack/react-query-devtools": "^5.8.4",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "date-fns": "^3.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
+    "react-bootstrap-time-picker": "^2.0.1",
     "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
@@ -30,7 +32,7 @@
     "react-toastify": "^9.1.3",
     "recharts": "^2.10.4",
     "simplebar-react": "^3.2.4",
-    "yup": "^1.3.2"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@coreui/coreui": "^5.0.0-alpha.3",
