--- a/.env
+++ b/.env
@@ -2,4 +2,5 @@ VITE_REACT_APP_API_BASE_URL = "http://localhost:5000/api/v1"
 VITE_HOST_URL = "http://localhost:5000/"
 VITE_API_BASE_PRODUCTION: "https://clinicbackend.bishrimohammed.com"
 VITE_API_BASE_DEVELOPMENT: "http://localhost:5000"
-VITE_REACT_DEV: "producation"
+# VITE_REACT_DEV: "developement"
+VITE_REACT_DEV: "production"
